# proc-macro-workshop

./: Cargo.toml  main.rs
.github/workflows/: ci.yml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 01-specifier-types.rs  04-multiple-of-8bits.stderr  06-enums.rs  09-variant-out-of-range.stderr  11-bits-attribute-wrong.stderr  progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 01-parse-header.rs  05-repeat-section.rs  07-inclusive-range.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 01-parse-enum.rs  progress.rs
