[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug = { path = "debug" }
proc-macro2 = "1.0.81"
seq = { path = "seq" }
sorted = { path = "sorted" }
syn = { version = "2.0.60", features = ["visit-mut", "extra-traits"] }
